Fixed box-inset bug on mobile, refactored css, fixedmobile container issue, updated README

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
+@import url(https://fonts.googleapis.com/css?family=Bitter);
 
 ::selection {
 	background:rgba(116, 244, 158, 0.8);
@@ -93,7 +94,7 @@ a.before:hover:before,a.after:hover:after{
 }
 
 svg {
-	font: 14em/1 Source Sans Pro;
+	font: 14em/1 Bitter;
 	font-weight: 200;
 	position: absolute;
 	width: 100%;
@@ -159,7 +160,7 @@ svg {
 .me-btn a{
 	box-sizing:border-box;
 	color:#F3F3F3;
-	padding:10px;
+	padding:10px 5px;
 	width:150px;
 	background-color:#31302B;
 	border:3px solid #F3F3F3;
@@ -174,11 +175,12 @@ svg {
 	color:#31302B;
 }
 
+/* Project Panel */
 .project-btn, .me-btn, .project-btn a, .img-container, .text-center, .arrow-intro {
 	text-align:center;
 }
 
-.project-btn a{
+.project-btn a, .exp-btn a {
 	box-sizing:border-box;
 	color:#31302B;
 	background:#FFF;
@@ -187,9 +189,16 @@ svg {
 	border:3px solid #31302B;
 	display:inline-block;
 	margin:5px 0;
-	box-shadow:inset 0 0 0 0 #31302B;
 	-webkit-transition:all linear 1s;
 	transition:all linear 1s;
+}
+
+.project-btn a:hover, .exp-btn a:hover{
+	text-decoration: underline;
+}
+
+.project-btn a {
+	box-shadow:inset 0 0 0 0 #31302B;
 }
 
 .project-btn .active {
@@ -382,18 +391,6 @@ svg {
 	-webkit-transform:translateX(-18px);
 }
 
-.exp-btn a{
-	box-sizing:border-box;
-	color:#31302B;
-	background:#FFF;
-	padding:10px;
-	min-width:200px;
-	border:3px solid #31302B;
-	display:inline-block;
-	margin:5px 0;
-	-webkit-transition:all linear 1s;
-	transition:all linear 1s;
-}
 .exp-btn .flipped {
 	border: 3px solid rgba(49,48,43,0.1);
 	color: #F3F3F3;
@@ -459,6 +456,11 @@ svg {
 	.project-btn{
 		width:50%;
 	}
+
+	.project-btn .active {
+		box-shadow:inset 130px 0 0 0 #31302B;
+	}
+
 	.name-intro{
 		font-size:2.7em;
 	}
@@ -476,7 +478,7 @@ svg {
 		height:78.1%;
 	}
 	.me-btn a{
-		width: 100px;
+		width: 85px;
 	}
 }
 
